--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "bulma": "^0.7.4",
     "chalk": "^2.3.2",
     "compression": "1.7.3",
     "cross-env": "5.2.0",
@@ -50,6 +51,7 @@
     "redux": "3.7.2",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.16.2",
+    "redux-thunk": "^2.1.0",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
     "warning": "^4.0.1",
@@ -57,19 +59,19 @@
   },
   "devDependencies": {
     "@babel/cli": "7.1.2",
-    "@babel/core": "7.1.2",
+    "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-class-properties": "7.1.0",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/plugin-transform-modules-commonjs": "7.1.0",
     "@babel/plugin-transform-react-constant-elements": "7.0.0",
     "@babel/plugin-transform-react-inline-elements": "7.0.0",
-    "@babel/preset-env": "7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "^7.0.0",
     "add-asset-html-webpack-plugin": "3.0.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.4",
+    "babel-loader": "^8.0.5",
     "babel-plugin-dynamic-import-node": "2.2.0",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-react-intl": "3.0.1",
@@ -107,7 +109,7 @@
     "shelljs": "^0.8.1",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
-    "webpack": "4.20.2",
+    "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.3"
