--- a/front/package.json
+++ b/front/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-loadable": "^5.5.0",
+    "react-markdown": "^4.0.6",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "5.0.0-alpha.6",
