--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,21 @@
-version: '3.7'
-
-services:
-  web:
-    build: ./back
-    command: gunicorn api.wsgi:application --bind 0.0.0.0:8000
-    volumes:
-      - ./back/:/opt/vuedensemble/back/
-      - static_volume:/opt/vuedensemble/back/static
-    expose:
-      - 8000
-    environment:
-      - SECRET_KEY='fqjeg=occ=b6z)l24q91birk3at4+cl57-ro1z3-2-9bx(&oel'
-      - SQL_ENGINE=django.db.backends.postgresql
-      - SQL_DATABASE=postgres
-      - SQL_USER=postgres
-      - SQL_PASSWORD=postgres
-      - SQL_HOST=db
-      - SQL_PORT=5432
-    depends_on:
-      - db
-
-  db:
-    image: postgres:10.5-alpine
-    volumes:
-      - pg_data:/var/lib/postgresql/data/
-
-
-  front:
-    build: ./front
-    command: npm start 0.0.0.0:3000
-    volumes:
-      - ./front:/opt/vuedensemble/front/
-    expose:
-      - 3000
-
-  nginx:
-    build: ./nginx
-    volumes:
-      - static_volume:/opt/vuedensemble/back/static
-    ports:
-      - 80:80
-    depends_on:
-      - web
-      - front
-
-volumes:
-  static_volume:
-  pg_data:
-    external: true
+U2FsdGVkX18ricBZtbNtIDEXE/ysuC5qVPyAzoP5kUXa55/RAMZx9Cfn+nPwi8i0
+JxOXQ8iirEkYkTikGs8dvdeZh0cdKe4YwMJ3ArRnywwSx7ljpbJzKQHf+wZJU17O
+dL8VL6rTK9JQQNo6kUKtJZCLarszDbH5eWL1YZy0+w2/y3HwadQFKpZy6jUEvvqw
+g+fezArT0oz2wRqUfr+fR9p56n1GZ3wFSswgWbvbV4fYn1n/VwxV+6gb7LVd+qg1
+RscDQGTomo6FFiVZt3YYoK+wYDp+/FxWOvk+DuXYpd1BX6/w+aEgDl3nbYp9B3lu
+SlOaDNMH2yNd6LpoHjQT2QAIeC/4qhW7oL+JikHJuCw1q8oKgBZfh4aW817ir/tA
+p9A9+oT/+wloEYZh5Y/ukncAT652XTZRqhk9Sn7bRERwi/Pjnl7cWo+SiWiymCU2
+/jNnHw/GQb1N+LUJaHFwRFpormqzt1o91K1uznMx3r10N4ywtYc0JD4VJ5nz87T9
+tzq96LGJhN7ZgbREze3QsObnSM4/HdlJEiJ5S1JCzpReqqXjoHSfdQTC8z+hlDIF
+lAdkrRq+tqSRpZPGITLlJTfZQ7J91hT9XkoFCG2BYqiNEeazBrb4HhZ2JAW+Big5
+5AD8coGAFa28LcllccDBfHtZpnOTnWX7McvdY6lBZilosqQ8A0nd1WCNXsNTjFJs
+Ppvw1Hw4fy9aJlLM5gWqzu0oPvZp3nWnzvgpkuvzsl/nGAArfITABM9IcEYGceEO
+RCfBhJpmeSZNhKu70BWhykLD6Rl7AW2Ui63VcDT0MQMu1JeK5vKJOSpPXnm4dS14
+1B/RASzVwfigHYONSLRWZ3EL3xmdd7UkDgzx0MOSi8mUDX7KlvrK3OKbaQX7Yv+i
+pIByPie/bPCeNGzxnM1x2PQmTjBZsXz0ZvDJgDKjYsLkh8QkTOp26Gfsw8xihz8T
+lC4ij4Q1Lfw/G9ZTrH/eRtUQqUKmED4a+9bB40lzW21Rb4jgZtiLQ5dVk6EUTDdQ
+X5StiRkpR72gmsTDMccon4wdUdkxGUKlOl3nX/Nr1XlnQkyYCWKtiGrtW5vJvGYN
+ZBq7tMY5xUmRGdo3wIedPwnGhRT89ER99gTP0ayxZ/w0SVnuIVVtNI8APtqo+mO9
+SYuD044R+U3Zy+9q37TK5RQdpxyWT6od1j74+YBSi0NlKnxhC8MDUBRjkZ81R2TE
+vRsnTr7zy46mQft5SHbaVHMVv4eyg5flvJYjiTmcbqDiQlNKK2xdvzXmwi60bgUA
+Oi1SOHYQfhK6miCygUdDCQ==
