--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,7 @@ upstream front {
 server {
 
   listen 80;
+  server_name vue-d-ensemble.fr;
 
   location /static/ {
     alias /opt/vuedensemble/back/static/;
