--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "bulma": "^0.7.4",
+    "bulma-divider": "^0.2.0",
+    "bulma-extensions": "^6.2.7",
     "chalk": "^2.3.2",
     "compression": "1.7.3",
     "cross-env": "5.2.0",
@@ -43,9 +45,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-google-charts": "^3.0.13",
     "react-helmet": "^5.2.0",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.6",
+    "react-notifications-component": "^1.1.1",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "5.0.0-alpha.6",
