--- a/front/package.json
+++ b/front/package.json
@@ -50,9 +50,11 @@
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.6",
     "react-notifications-component": "^1.1.1",
+    "react-rating-tooltip": "^1.1.6",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "5.0.0-alpha.6",
+    "react-tooltip": "^3.10.0",
     "redux": "3.7.2",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.16.2",
