--- a/back/Pipfile
+++ b/back/Pipfile
@@ -11,7 +11,7 @@ django-cors-headers = "*"
 djangorestframework = "*"
 gunicorn = "*"
 djangorestframework-jwt = "*"
-psycopg2-binary = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
