--- a/back/Pipfile
+++ b/back/Pipfile
@@ -11,8 +11,10 @@ django-cors-headers = "*"
 djangorestframework = "*"
 gunicorn = "*"
 djangorestframework-jwt = "*"
-psycopg2-binary = "*"
+psycopg2 = "*"
 Pillow = "6.1.0"
+boto3= "==1.9.38"
+django-storages= "==1.7.1"
 
 [requires]
 python_version = "3.7"
