--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -19,6 +19,9 @@ RUN apk update \
 # install dependencies
 RUN pip install --upgrade pip
 RUN pip install pipenv
+RUN apk --update add libxml2-dev libxslt-dev libffi-dev gcc musl-dev libgcc openssl-dev curl
+RUN apk add jpeg-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev
+
 COPY ./Pipfile /opt/vuedensemble/back
 RUN pipenv install --skip-lock --system --dev
 
