--- a/back/Pipfile
+++ b/back/Pipfile
@@ -12,9 +12,9 @@ djangorestframework = "*"
 gunicorn = "*"
 djangorestframework-jwt = "*"
 psycopg2 = "*"
-Pillow = "6.1.0"
-boto3= "==1.9.38"
-django-storages= "==1.7.1"
+Pillow = "*"
+boto3= ">=1.9.38"
+django-storages= "*"
 
 [requires]
 python_version = "3.7"
