--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "apexcharts": "^3.14.0",
     "bulma": "^0.7.4",
     "bulma-divider": "^0.2.0",
     "bulma-extensions": "^6.2.7",
@@ -44,6 +45,7 @@
     "minimist": "1.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
+    "react-apexcharts": "^1.3.6",
     "react-dom": "^16.5.2",
     "react-google-charts": "^3.0.13",
     "react-helmet": "^5.2.0",
@@ -61,6 +63,7 @@
     "redux-thunk": "^2.1.0",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
+    "uuid": "^3.3.3",
     "warning": "^4.0.1",
     "whatwg-fetch": "2.0.4"
   },
@@ -116,7 +119,7 @@
     "shelljs": "^0.8.1",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
-    "webpack": "^4.20.2",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.3"
