--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,3 +37,17 @@ server {
   }
 
 }
+
+server {
+
+  listen 80;
+  server_name api.vue-d-ensemble.fr;
+
+  location / {
+    proxy_pass http://api;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+  }
+
+}
