--- a/back/Pipfile
+++ b/back/Pipfile
@@ -7,15 +7,15 @@ verify_ssl = true
 
 [packages]
 django = "==2.2"
-django-cors-headers = "*"
-djangorestframework = "*"
-gunicorn = "*"
-djangorestframework-jwt = "*"
-psycopg2 = "*"
-Pillow = "*"
+django-cors-headers = "==2.5.2"
+djangorestframework = "==3.9.2"
+gunicorn = "==19.9.0"
+djangorestframework-jwt = "==1.11.0"
+psycopg2 = "==2.7.7"
+Pillow = "==6.1.0"
 boto3 = ">=1.9.38"
-django-storages = "*"
-django-registration = "*"
+django-storages = "==1.7.2"
+django-registration = "==3.1"
 
 [requires]
 python_version = "3.7"
