--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,53 +1,74 @@
-upstream api {
-  server web:8000;
-}
-
-upstream front {
-  server front:3000;
-}
-
-server {
-
-  listen 80;
-  server_name vue-d-ensemble.fr;
-
-  location /static/ {
-    alias /opt/vuedensemble/back/static/;
+  upstream api {
+    server web:8000;
   }
 
-  location / {
-    proxy_pass http://front;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
+  upstream front {
+    server front:3000;
   }
 
-  location /api {
-    proxy_pass http://api;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
+  server {
+    listen 80;
+    server_name vue-d-ensemble.fr;
+
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
+
+    location / {
+      return 301 https://$host$request_uri;
+    }
   }
 
-  # ignore cache frontend
-  location ~* (service-worker\.js)$ {
-    add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-    expires off;
-    proxy_no_cache 1;
+  server {
+    listen 80;
+    server_name api.vue-d-ensemble.fr;
+
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
+
+    location / {
+      return 301 https://$host$request_uri;
+    }
   }
 
-}
+  server {
+    listen 443 ssl;
+    server_name vue-d-ensemble.fr;
 
-server {
+    ssl_certificate /etc/letsencrypt/live/vue-d-ensemble.fr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vue-d-ensemble.fr/privkey.pem;
 
-  listen 80;
-  server_name api.vue-d-ensemble.fr;
+    location / {
+      proxy_pass http://front;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_redirect off;
+    }
 
-  location / {
-    proxy_pass http://api;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
+    # ignore cache frontend
+    location ~* (service-worker\.js)$ {
+      add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      expires off;
+      proxy_no_cache 1;
+    }
+
+    location /static/ {
+      alias /opt/vuedensemble/back/static/;
+    }
   }
 
-}
+  server {
+    listen 443 ssl;
+    server_name api.vue-d-ensemble.fr;
+
+    ssl_certificate /etc/letsencrypt/live/vue-d-ensemble.fr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vue-d-ensemble.fr/privkey.pem;
+
+    location / {
+      proxy_pass http://api;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_redirect off;
+    }
+  }
