--- a/front/package.json
+++ b/front/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "react-redux-boilerplate",
+  "name": "vue-d-ensemble",
   "version": "1.0.0",
-  "description": "A minimal react-redux boilerplate with all the best practices",
+  "description": "Plateforme pour un pouvoir politique légitime et compétent",
   "repository": {
     "type": "git",
-    "url": "git://github.com/flexdinesh/react-redux-boilerplate.git"
+    "url": "git://github.com/Diplow/TheBigPicture.git"
   },
   "license": "MIT",
-  "author": "Dinesh Pandiyan",
+  "author": "Ulysse Boillot",
   "scripts": {
     "prebuild": "npm run build:clean",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
@@ -26,108 +26,62 @@
     "test:watch": "cross-env NODE_ENV=test jest --watchAll"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "apexcharts": "^3.14.0",
+    "apexcharts": "^3.18.1",
     "bulma": "^0.7.4",
     "bulma-divider": "^0.2.0",
     "bulma-extensions": "^6.2.7",
-    "chalk": "^2.3.2",
-    "compression": "1.7.3",
-    "cross-env": "5.2.0",
-    "express": "4.16.3",
-    "fontfaceobserver": "2.0.13",
-    "history": "4.7.2",
-    "hoist-non-react-statics": "3.0.1",
-    "immutable": "3.8.2",
-    "invariant": "2.2.4",
-    "ip": "1.1.5",
-    "lodash": "4.17.13",
-    "minimist": "1.2.3",
+    "chalk": "^4.0.0",
+    "circular-dependency-plugin": "^5.2.0",
+    "connected-react-router": "^6.8.0",
+    "cross-env": "^5.2.0",
+    "express": "^4.17.1",
+    "history": "^4.7.2",
+    "html-webpack-plugin": "^4.2.0",
+    "ip": "^1.1.5",
+    "minimist": "^1.2.5",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
-    "react-apexcharts": "^1.3.6",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^16.5.2",
     "react-google-charts": "^3.0.13",
-    "react-helmet": "^5.2.0",
-    "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.6",
     "react-notifications-component": "^1.1.1",
-    "react-rating-tooltip": "^1.1.6",
-    "react-redux": "5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "5.0.0-alpha.6",
-    "react-tooltip": "^3.10.0",
-    "redux": "3.7.2",
-    "redux-immutable": "4.0.0",
-    "redux-saga": "0.16.2",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0",
+    "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.1.0",
-    "reselect": "4.0.0",
-    "rimraf": "2.6.2",
-    "sanitize.css": "8.0.0",
+    "sanitize.css": "^8.0.0",
     "uuid": "^3.3.3",
-    "warning": "^4.0.1",
-    "whatwg-fetch": "2.0.4"
+    "webpack": "^4.42.1",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.1.2",
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "7.1.0",
-    "@babel/plugin-transform-react-constant-elements": "7.0.0",
-    "@babel/plugin-transform-react-inline-elements": "7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "7.0.0",
-    "@babel/register": "^7.0.0",
-    "add-asset-html-webpack-plugin": "3.0.1",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-dynamic-import-node": "2.2.0",
-    "babel-plugin-lodash": "3.3.4",
-    "babel-plugin-react-intl": "3.0.1",
-    "babel-plugin-react-transform": "3.0.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.19",
-    "circular-dependency-plugin": "5.0.2",
-    "css-loader": "1.0.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "5.7.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-airbnb-base": "13.1.0",
-    "eslint-import-resolver-webpack": "0.10.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-redux-saga": "0.9.0",
-    "eventsource-polyfill": "0.9.6",
-    "exports-loader": "0.7.0",
-    "file-loader": "1.1.11",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
-    "imports-loader": "0.8.0",
-    "jest-cli": "23.6.0",
-    "lint-staged": "7.3.0",
-    "node-plop": "0.16.0",
-    "node-sass": "^4.12.0",
-    "null-loader": "0.1.1",
-    "plop": "2.1.0",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^3.0.0",
-    "react-test-renderer": "^16.5.2",
-    "rimraf": "2.6.2",
-    "sass-loader": "^7.0.1",
-    "shelljs": "^0.8.1",
-    "style-loader": "0.23.1",
-    "url-loader": "1.1.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "3.4.0",
-    "webpack-hot-middleware": "2.24.3"
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
+    "eventsource-polyfill": "^0.9.6",
+    "exports-loader": "^0.7.0",
+    "fibers": "^3.1.1",
+    "file-loader": "^6.0.0",
+    "fontfaceobserver": "^2.1.0",
+    "html-loader": "^1.1.0",
+    "immutable": "^4.0.0-rc.12",
+    "node-sass": "^4.13.1",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "seamless-immutable": "^7.1.4",
+    "style-loader": "^1.1.4",
+    "whatwg-fetch": "^3.0.0"
   },
-  "resolutions": {
-    "babel-core": "7.0.0-bridge.0"
-  },
+  "resolutions": {},
   "engines": {
     "node": ">=8.10.0",
     "npm": ">=5"
