--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,7 @@
     "bulma-extensions": "^6.2.7",
     "chalk": "^4.0.0",
     "circular-dependency-plugin": "^5.2.0",
+    "compression": "^1.7.4",
     "connected-react-router": "^6.8.0",
     "cross-env": "^5.2.0",
     "express": "^4.17.1",
