--- a/front/package.json
+++ b/front/package.json
@@ -57,6 +57,7 @@
     "sanitize.css": "^8.0.0",
     "uuid": "^3.3.3",
     "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
   },
