--- a/front/package.json
+++ b/front/package.json
@@ -68,6 +68,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "babel-plugin-lodash": "^3.3.4",
     "css-loader": "^3.5.2",
     "eventsource-polyfill": "^0.9.6",
     "exports-loader": "^0.7.0",
