--- a/front/package.json
+++ b/front/package.json
@@ -73,6 +73,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "css-loader": "^3.5.2",
+    "cypress": "^4.6.0",
     "eventsource-polyfill": "^0.9.6",
     "exports-loader": "^0.7.0",
     "fibers": "^3.1.1",
@@ -80,7 +81,7 @@
     "fontfaceobserver": "^2.1.0",
     "html-loader": "^1.1.0",
     "immutable": "^4.0.0-rc.12",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "seamless-immutable": "^7.1.4",
