switch domain to vuedensemble.org

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@
 
   server {
     listen 80;
-    server_name vue-d-ensemble.fr;
+    server_name vuedensemble.org;
 
     location /.well-known/acme-challenge/ {
       root /var/www/certbot;
@@ -21,7 +21,7 @@
 
   server {
     listen 80;
-    server_name api.vue-d-ensemble.fr;
+    server_name api.vuedensemble.org;
 
     location /.well-known/acme-challenge/ {
       root /var/www/certbot;
@@ -34,10 +34,10 @@
 
   server {
     listen 443 ssl;
-    server_name vue-d-ensemble.fr;
+    server_name vuedensemble.org;
 
-    ssl_certificate /etc/letsencrypt/live/vue-d-ensemble.fr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/vue-d-ensemble.fr/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/vuedensemble.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vuedensemble.org/privkey.pem;
 
     location / {
       proxy_pass http://front;
@@ -60,10 +60,10 @@
 
   server {
     listen 443 ssl;
-    server_name api.vue-d-ensemble.fr;
+    server_name api.vuedensemble.org;
 
-    ssl_certificate /etc/letsencrypt/live/vue-d-ensemble.fr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/vue-d-ensemble.fr/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/vuedensemble.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vuedensemble.org/privkey.pem;
 
     location / {
       proxy_pass http://api;
