--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "test:watch": "cross-env NODE_ENV=test jest --watchAll"
   },
   "dependencies": {
+    "@svgr/cli": "^5.4.0",
     "apexcharts": "^3.18.1",
     "bulma": "^0.7.4",
     "bulma-divider": "^0.2.0",
@@ -69,6 +70,7 @@
     "@babel/plugin-transform-react-inline-elements": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
