--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,6 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd front
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: npm --prefix front ci
+    - run: npm --prefix front run build --if-present
+    - run: npm --prefix front test
