--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -1,6 +1,6 @@
 {
     "parser": "babel-eslint",
-    "extends": ["airbnb", "plugin:react/recommended"],
+    "extends": [],
     "env": {
       "browser": true,
       "node": true,
@@ -8,7 +8,6 @@
       "es6": true
     },
     "plugins": [
-      "redux-saga",
       "react",
       "jsx-a11y"
     ],
@@ -45,7 +44,6 @@
       ],
       "max-len": 0,
       "no-console": 1,
-      "react/forbid-prop-types": 0,
       "react/jsx-curly-brace-presence": "off",
       "react/jsx-first-prop-new-line": [
         2,
@@ -54,8 +52,6 @@
       "react/jsx-filename-extension": 0,
       "react/require-default-props": 0,
       "react/self-closing-comp": 0,
-      "redux-saga/no-yield-in-race": 2,
-      "redux-saga/yield-effects": 2,
       "jsx-a11y/anchor-is-valid": 0,
       "react/jsx-one-expression-per-line": 0
     },
