--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-d-ensemble",
+  "name": "vuedensemble",
   "version": "1.0.0",
   "description": "Plateforme pour un pouvoir politique légitime et compétent",
   "repository": {
@@ -28,6 +28,7 @@
   "dependencies": {
     "@svgr/cli": "^5.4.0",
     "apexcharts": "^3.18.1",
+    "babel-eslint": "^10.1.0",
     "bulma": "^0.7.4",
     "bulma-divider": "^0.2.0",
     "bulma-extensions": "^6.2.7",
@@ -76,6 +77,10 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "css-loader": "^3.5.2",
     "cypress": "^4.6.0",
+    "eslint": "^7.2.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-redux-saga": "^1.1.3",
     "eventsource-polyfill": "^0.9.6",
     "exports-loader": "^0.7.0",
     "fibers": "^3.1.1",
@@ -83,6 +88,7 @@
     "fontfaceobserver": "^2.1.0",
     "html-loader": "^1.1.0",
     "immutable": "^4.0.0-rc.12",
+    "jest": "^26.0.1",
     "node-sass": "^4.14.1",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
