--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,5 +26,9 @@ jobs:
         cd back
         pipenv install --deploy --dev
         
-    - run: pipenv run back/manage.py test
+    - name: Run tests
+      run: |
+        pipenv shell
+        cd back
+        python manage.py test
 
