test bps reducer

--- a/front/package.json
+++ b/front/package.json
@@ -21,7 +21,7 @@
     "start:prod": "cross-env NODE_ENV=production node server",
     "start:production": "npm run test && npm run build && npm run start:prod",
     "pretest": "npm run test:clean && npm run lint",
-    "test": "cross-env NODE_ENV=test jest --coverage",
+    "test": "cross-env NODE_ENV=test jest --coverage --verbose",
     "test:clean": "rimraf ./coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll"
   },
