--- a/back/Pipfile
+++ b/back/Pipfile
@@ -12,7 +12,7 @@ djangorestframework = "==3.9.2"
 gunicorn = "==19.9.0"
 djangorestframework-jwt = "==1.11.0"
 psycopg2 = "==2.7.7"
-Pillow = "==6.2.2"
+Pillow = ">=7.1.0"
 boto3 = ">=1.9.38"
 django-storages = "==1.7.2"
 django-registration = "==3.1"
