--- a/front/package.json
+++ b/front/package.json
@@ -38,6 +38,7 @@
     "connected-react-router": "^6.8.0",
     "cross-env": "^5.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "history": "^4.7.2",
     "html-webpack-plugin": "^4.2.0",
     "ip": "^1.1.5",
@@ -57,8 +58,9 @@
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.1.0",
     "sanitize.css": "^8.0.0",
+    "serialize-javascript": ">=3.1.0",
     "uuid": "^3.3.3",
-    "webpack": "^4.42.1",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
